[package]
name = "shared-bus-rtic"
version = "0.2.2"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"

description = "Provides utilities for sharing peripheral communication buses in an RTIC application"
homepage = "https://github.com/ryan-summers/shared-bus-rtic"
repository = "https://github.com/ryan-summers/shared-bus-rtic"
documentation = "https://docs.rs/shared-bus-rtic"

categories = ["embedded", "concurrency", "no-std", "hardware-support"]
keywords = ["shared-bus", "rtic", "i2c", "spi", "embedded-hal"]
license = "MIT"
readme = "README.md"

[dependencies]
cortex-m = { version = "0.6", optional = true }
embedded-hal = "0.2.4"
nb = "1.0.0"

[dependencies.atsamd-hal]
version = "0.12"
#features = ["samd21g"]
path="../atsamd/hal"
default-features = false

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

#[dependencies.panic-halt]
#version = "0.2"
#optional = true

[features]
thumbv6 = ["cortex-m"]
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
